fixed line spacing

--- a/main.css
+++ b/main.css
@@ -61,7 +61,8 @@ body{
 }
 
 .banner p{
-        font-size: 50px
+        line-height: 2px;
+        font-size: 35px
 }
 
 ul {
